[gd_scene load_steps=4 format=3 uid="uid://bk7vxhkbebhl4"]

[ext_resource type="Script" path="res://scripts/ServerSection.gd" id="1_yh4tw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tjg06"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qqikl"]

[node name="ServerSection" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tjg06")
script = ExtResource("1_yh4tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SectionTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 20
text = "Community Servers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServerScroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ServerList" type="VBoxContainer" parent="VBoxContainer/ServerScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Padding" type="Panel" parent="VBoxContainer/ServerScroll/ServerList"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qqikl")
